--- a/tools/choose.html
+++ b/tools/choose.html
@@ -13,26 +13,36 @@
 </head>
 <body>
 <h1> Choose your espece </h1>
+<FORM NAME="personnage">
 	<table border="0" name="choisir" align="center">
 	<tr>
-		<td>	<img id="Glurps"src="/home/rlicornes/Projet_Father/Personnages/Glurps.png"> </td>
-		<td> 	<img id="Hatburg"src="/home/rlicornes/Projet_Father/Personnages/Hatburg.png"> </td>
-		<td>	<img id="Laistar"src="/home/rlicornes/Projet_Father/Personnages/Laistar.png"> </td>
+		<td>	<img NAME ="Glurps " id="Glurps"src="../images/characters/Glurps.png"> </td>
+		<td> 	<img NAME ="Hatburg" id="Hatburg"src="../images/characters/Hatburg.png"> </td>
+		<td>	<img NAME ="Laistar" id="Laistar"src="../images/characters/Laistar.png"> </td>
 	</tr>
 	<tr>
-		<td> <img id="Larva" src="/home/rlicornes/Projet_Father/Personnages/Larva.png"> </img> </td>
-		<td> <img id="MrMustach" src="/home/rlicornes/Projet_Father/Personnages/MrMustach.png"> </img></td>
-		<td> <img id="Mrsur"src="/home/rlicornes/Projet_Father/Personnages/Mrsur.png"> </img></td>
+		<td> <img NAME ="Larva" id="Larva" src="../images/characters/Larva.png"> </img> </td>
+		<td> <img NAME ="MrMustach" id="MrMustach" src="../images/characters/MrMustach.png"> </img></td>
+		<td> <img NAME ="Mrsur" id="Mrsur"src="../images/characters/Mrsur.png"> </img></td>
 	</tr>
 	<tr>
-		<td> <img id="Orzren"src="/home/rlicornes/Projet_Father/Personnages/Orzren.png"> </img> </td>
-		<td> <img id="Runorpox"src="/home/rlicornes/Projet_Father/Personnages/Runorpox.png"></img> </td>
-		<td> <img id="Vaex"src="/home/rlicornes/Projet_Father/Personnages/Vaex.png"></img> </td>
+		<td> <img NAME ="Orzren" id="Orzren"src="../images/characters/Orzren.png"> </img> </td>
+		<td> <img NAME ="Runorpox" id="Runorpox"src="../images/characters/Runorpox.png"></img> </td>
+		<td> <img NAME ="Vaex" id="Vaex"src="../images/characters/Vaex.png"></img> </td>
 	</tr>
-	<input type=button name='valid' value="Valid your choise" onClick="receive();"/>
-
+	<input type=button name='valid' value="Valid your choise" onClick="controle(personnage);"/>
+</FORM>
 
 <script>
+
+	function controle(personnage){
+		var receive = document.personnage.name;
+		if (receive = null) {
+			receive.open("GET", "game.pug",true);
+			receive.send(null);
+			alert(receive);
+		}
+	}
 
 	function receive(){
 		var select = $(this).attr("id"); // IDEA: recuperation de l'id n'est pas réussi
